# minixx

./: .gitignore  LICENSE  README.md  context.py  guards.py  inputs.py  llms.py  logs.py  main.py  protocol.py  pyproject.toml  requirements.txt  run_minixx.py  setup.py  tools.py
config/: config.json  prompt.txt  system_prompt.txt
minixx-workspace/: patch.txt
minixx-workspace/src/: text_utils.py
minixx-workspace/tests/: test_text_utils.py
src/minixx/: __main__.py  agentic_loop.py  cli_output.py  command_runner.py  context.py  finish_handler.py  finish_reviewer.py  history_manager.py  inputs.py  llms.py  logs.py  models.py  patches.py  planner.py  protocol.py  test_failures.py  tools.py  traces.py
test_workspace/: README.md  config.json  notes.txt  sample.txt
test_workspace/bugfix_001_date_range/: metadata.json  prompt.txt
test_workspace/bugfix_001_slugify/: metadata.json  prompt.txt
test_workspace/bugfix_002_date_range/: metadata.json
test_workspace/bugfix_002_money/: metadata.json  prompt.txt
test_workspace/bugfix_002_order_totals/: metadata.json  prompt.txt
test_workspace/bugfix_003_cache_ttl/: metadata.json  prompt.txt
test_workspace/bugfix_003_inventory/: metadata.json  prompt.txt
test_workspace/bugfix_004_config_merge/: metadata.json  prompt.txt
test_workspace/bugfix_004_pagination/: metadata.json  prompt.txt
test_workspace/bugfix_005_lru_cache/: metadata.json  (+1 more)
tests/: test_agentic_loop.py  test_command_runner.py  test_context.py  test_finish_handler.py  test_inputs.py  test_models.py  test_patches.py  test_tools.py  test_traces.py
(+84 files in other folders)
