[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minixx"
version = "0.1.0"
description = "Didactic Python framework for building code agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["google-genai>=1.0.0", "ollama>=0.5.0", "pytest>=8.0.0"]

[project.scripts]
minixx = "minixx.agentic_loop:main"

[tool.setuptools]
package-dir = {"" = "src"}
